# Speckle

./: .travis.yml  CMakeLists.txt  appveyor.yml
application/: .gitignore  main.py  main.ui  wrapper.py
application/src/main/python/: main.py
fleck/: setup.py
fleck/fleck/: renderer.py
fleck/fleck/tests/: test_fleck.py
speckle/: CMakeLists.txt
speckle/fleck/: LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
speckle/include/: rendering.hpp
speckle/speckle/: CMakeLists.txt
speckle/speckle/include/: Renderer.h  library.h  rendering.hpp
speckle/speckle/src/: Camera.cpp  Camera.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  library.cpp  rendering.cpp
speckle/speckle/src/resources/shaders/: fragment.glsl  vertex.glsl
speckle/speckle/src/shaders/: vertex.glsl
speckle/src/: Renderer.cpp  Renderer.hpp
speckle/test/: CMakeLists.txt
speckle/window/: main.cpp
test/: CMakeLists.txt
test/include/: catch.hpp
test/integration/: main.cpp  meta.cpp
test/unit/: meta.cpp
