[metadata]
name = fleck
version = 0.0.1
description = Python wrapper for the speckle point cloud renderer
long_description = file: README.md
classifiers =
    Development Status :: 1 - Planning
    Environment :: X11 Applications
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Programming Language :: C++
    Programming Language :: Python :: 3.6
    Topic :: Multimedia :: Graphics :: Viewers
    Topic :: Scientific/Engineering :: Visualization
keywords = point cloud, viewer, laser scanning, LAS, remote sensing
url = https://github.com/SwamyDev/Speckle
author = Bernhard Raml
author_email = bernhard.raml@ait.ac.at
license = MIT

[options]
packages =
    fleck
include_package_data = True
zip_safe = False

[aliases]
test=pytest